<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thorrism.parse.skeleton.activities.ParseSignupActivity">

    <ScrollView
        android:id="@+id/signup_scroll_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="?attr/actionBarSize"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:text="@string/signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_font_size"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.thorrism.designtools.views.ShakeEditText
                    android:id="@+id/signup_user_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:maxLines="1"
                    app:defaultError="@string/username_error_message_invalid"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.thorrism.designtools.views.ShakeEditText
                    android:id="@+id/signup_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    app:defaultError="@string/password_error_message_invalid"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_password_confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.thorrism.designtools.views.ShakeEditText
                    android:id="@+id/signup_password_confirm_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    app:defaultError="@string/password_error_message_invalid"/>

            </android.support.design.widget.TextInputLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="64dp"/>
            
        </LinearLayout>
    </ScrollView>

    <!-- Login button, initially hidden-->
    <com.thorrism.designtools.views.RaisedButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="attemptSignup"
        android:visibility="gone"
        app:content="@string/login_title"
        style="@style/RaisedButtonTheme"/>

    <include layout="@layout/toolbar"/>

</RelativeLayout>
