<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thorrism.parse.skeleton.activities.ParseLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/login_title_view"
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleTextTheme2"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <com.thorrism.designtools.views.ShakeEditText
                android:id="@+id/login_user_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:singleLine="true"
                android:maxLines="1"
                app:defaultError="@string/username_error_message_invalid"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <com.thorrism.designtools.views.ShakeEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                app:defaultError="@string/password_error_message_invalid"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <include layout="@layout/toolbar"/>

    <!-- Login button, initially hidden-->
    <com.thorrism.designtools.views.RaisedButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="attemptLogin"
        android:visibility="gone"
        app:content="@string/login_title"
        style="@style/RaisedButtonTheme"/>

</RelativeLayout>
