<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thorrism.parse.skeleton.activities.ParseStartActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleTextTheme"/>

    <com.thorrism.designtools.views.RaisedButton
        android:id="@+id/login_btn"
        android:layout_width="@dimen/raised_button_width_medium"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_btn"
        android:layout_centerHorizontal="true"
        android:onClick="userLogin"
        app:content="@string/login_btn"
        style="@style/RaisedButtonTheme"/>

    <com.thorrism.designtools.views.RaisedButton
        android:id="@+id/signup_btn"
        android:layout_width="@dimen/raised_button_width_medium"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="userSignup"
        app:content="@string/signup_btn"
        style="@style/RaisedButtonTheme"/>

</RelativeLayout>
